fixed vertical spacing

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html,body{
 	position:absolute;
 	z-index:10;
 	width:100%;
-	height:320vw;
+	height:300vw;
 	background:url(taskhive-pattern-white.png) repeat top center;
 	pointer-events: none;
 	opacity:.03;
@@ -129,13 +129,13 @@ html,body{
 
 #noFees{
 	position:absolute;
-	transform:translateY(1000px);
+	transform:translateY(900px);
 	width:100%;
 }
 
 #sellYourServices{
 	position:absolute;
-	transform:translateY(1400px);
+	transform:translateY(1200px);
 	width:100%;
 }
 
@@ -147,20 +147,20 @@ html,body{
 
 #strongGuarantee{
 	position:absolute;
-	transform:translateY(1000px);
+	transform:translateY(900px);
 	width:100%;
 }
 
 #noAds{
 	position:absolute;
-	transform:translateY(1400px);
+	transform:translateY(1200px);
 	width:100%;
 }
 
 #whyPrivacy{
 	position:absolute;
 	z-index:11;
-	transform:translateY(2600px);
+	transform:translateY(2240px);
 	width:100%;
 }
 
@@ -177,7 +177,7 @@ html,body{
 .readyToTry{
 	position:absolute;
 	top:50%;
-	transform:translateY(1680px);
+	transform:translateY(1400px);
 	width:100%;
   text-align:center;
   background: rgba(0,255,255,.45);
